--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        // Check that you have the following line (if not, add it):
-        google()  // Google's Maven repository
-
+        jcenter()
+        mavenCentral()
+        google()
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.10'
